tests/fail/wrong_arity.py
def foo(a: int):
    b = 0


foo(5, 10)
